fix: sub-scroll-menu active item on exhibitions page

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -51,8 +51,8 @@
 			<a class="lg-black" href="http://annanova-gallery.ru"></a>
 			<div class="sub-scroll-menu">
 				<h4 class="item"></h4>
-				<h4 class="item"><a href="" onclick="$('#future').animatescroll();">FUTURE</a></h4>
-				<h4 class="item"><a href="" onclick="$('#past').animatescroll();">PAST</a></h4>
+				<h4 class="item"><a href="#future" onclick="$('#future').animatescroll();">FUTURE</a></h4>
+				<h4 class="item"><a href="#past" onclick="$('#past').animatescroll();">PAST</a></h4>
 			</div>
 			<a href="#nav" id="header-nav"></a>
 		</header>
