fix: changed font-family in banner desc

--- a/project.html
+++ b/project.html
@@ -93,7 +93,7 @@
 		<section id="b-banner" class="project-banner">
 			<div class="mask-content">
 				<div class="title">CONJURED LIFE</div>
-				<div class="text large">by Uldus Bakhtiozina, Александр Дашевский, Анатолий Павлович Белкин, Арт группа "МЫЛО", Влад Кульков, Денис Патракеев, Иван Плющ, Игорь Шуклин, Илья Гришаев, Ирина Дрозд, Максим Свищёв, Марья Дмитриева, Наталья Першина Якиманская, Петр Швецов, Ростан Тавасиев, Сергей Шеховцов, Стас Багс, Хаим Сокол, Юрий Александров</div>
+				<div class="desc text large">by Uldus Bakhtiozina, Александр Дашевский, Анатолий Павлович Белкин, Арт группа "МЫЛО", Влад Кульков, Денис Патракеев, Иван Плющ, Игорь Шуклин, Илья Гришаев, Ирина Дрозд, Максим Свищёв, Марья Дмитриева, Наталья Першина Якиманская, Петр Швецов, Ростан Тавасиев, Сергей Шеховцов, Стас Багс, Хаим Сокол, Юрий Александров</div>
 				<div class="text xlarge">by <a href="#">Uldus Bakhtiozina</a></div>
 				<div class="text large">
 					<span class="date-item">Photo and video art</span>
