--- a/news.html
+++ b/news.html
@@ -99,7 +99,7 @@
 
 			<!-- NEWS-SNIP -->
 			<section class="panel news row isotope-grid" data-isotope>
-				<div class="item 4u 6u(small) 12u$(xsmall)">
+				<div class="item 4u 6u(large) 12u$(small)">
 					<span class="news-snip-last">LAST NEWS</span>
 					<a href="news-item.html" title="Read" class="image fit">
 						<img src="images/news/1.png">
@@ -115,7 +115,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="item 4u 6u$(small) 12u$(xsmall)">
+				<div class="item 4u 6u$(large) 12u$(small)">
 					<span class="news-snip-last">LAST NEWS</span>
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/2.png">
@@ -131,7 +131,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="item 4u$ 6u(small) 12u$(xsmall)">
+				<div class="item 4u$ 6u(large) 12u$(small)">
 					<span class="news-snip-last">LAST NEWS</span>
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/3.png">
@@ -147,7 +147,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="item 4u 6u$(small) 12u$(xsmall)">
+				<div class="item 4u 6u$(large) 12u$(small)">
 					<span class="news-snip-last">LAST NEWS</span>
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/4.png">
@@ -163,7 +163,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="item 4u 6u(small) 12u$(xsmall)">
+				<div class="item 4u 6u(large) 12u$(small)">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/6.png">
 					</a>
@@ -178,7 +178,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="item 4u$ 6u$(small) 12u$(xsmall)">
+				<div class="item 4u$ 6u$(large) 12u$(small)">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/7.png">
 					</a>
@@ -193,7 +193,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="item 4u 6u(small) 12u$(xsmall)">
+				<div class="item 4u 6u(large) 12u$(small)">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/8.png">
 					</a>
@@ -208,7 +208,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="item 4u 6u$(small) 12u$(xsmall)">
+				<div class="item 4u 6u$(large) 12u$(small)">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/9.png">
 					</a>
