Правки по новой сетке

--- a/news-item.html
+++ b/news-item.html
@@ -207,7 +207,7 @@
 			</div>
 
 			<section class="panel news row 0% third-grid" id="news-list">
-				<div class="4u 6u(small) 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.25s">
+				<div class="4u 6u(large) 12u$(small) news-snip wow fadeIn" data-wow-delay="0.25s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/7.png">
 					</a>
@@ -220,7 +220,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="4u 6u$(small) 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.15s">
+				<div class="4u 6u$(large) 12u$(small) news-snip wow fadeIn" data-wow-delay="0.15s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/1.png">
 					</a>
@@ -233,7 +233,7 @@
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
-				<div class="4u$ 6u(small) 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.25s">
+				<div class="4u$ 6u(large) 12u$(small) news-snip wow fadeIn" data-wow-delay="0.25s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/2.png">
 					</a>
@@ -257,15 +257,15 @@
 
 		<footer id="footer">
 			<div class="row 0%">
-				<div class="4u 12u(xsmall) fit align-left(">
+				<div class="4u 12u(small) fit align-left(">
 					<h4><a href="http://annanova-gallery.ru/about.php">PARTNERSHIP</a></h4>
 					<p>For collectors, designers, museums, etc.</p>
 				</div>
-				<div class="4u 12u(xsmall) align-center">
+				<div class="4u 12u(small) align-center">
 					<h4>CONTACT US</h4>
 					<p><a href="tel:+7(812)275-97-62">+7 (812) 275-97-62</a></p>
 				</div>
-				<div class="4u 12u(xsmall) align-right">
+				<div class="4u 12u(small) align-right">
 					<div class="email-us">
 						<h4>EMAIL US</h4>
 						<p><a href="mailto:info@annanova-gallery.ru">info@annanova-gallery.ru</a></p>
