--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 			<section class="panel projects">
 				<h2 id="content" class="block-title">Projects</h2>
 				<div class="row 0%">
-					<div class="3u 12u$(xsmall)">
+					<div class="3u 12u$(small)">
 						<div class="projects-snip white wow fadeInUp" data-wow-delay="0.15s">
 							<a href="">
 								<span class="image fit">
@@ -332,7 +332,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="3u 12u$(xsmall)">
+					<div class="3u 12u$(small)">
 						<div class="projects-snip wow fadeInUp" data-wow-delay="0.2s">
 							<a href="">
 								<span class="image fit">
@@ -343,7 +343,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="3u 12u$(xsmall)">
+					<div class="3u 12u$(small)">
 						<div class="projects-snip wow fadeInUp" data-wow-delay="0.25s">
 							<a href="">
 								<span class="image fit">
@@ -354,7 +354,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="3u 12u$(xsmall)">
+					<div class="3u 12u$(small)">
 						<div class="projects-snip wow fadeInUp" data-wow-delay="0.25s">
 							<a href="">
 								<span class="image fit">
@@ -465,15 +465,15 @@
 <!-- FOOTER -->
 		<footer id="footer">
 			<div class="row 0%">
-				<div class="4u 12u(xsmall) fit align-left(">
+				<div class="4u 12u(small) fit align-left(">
 					<h4><a href="http://annanova-gallery.ru/about.php">PARTNERSHIP</a></h4>
 					<p><a href="">For collectors, designers, museums, etc.</a></p>
 				</div>
-				<div class="4u 12u(xsmall) align-center">
+				<div class="4u 12u(small) align-center">
 					<h4>CONTACT US</h4>
 					<p><a href="tel:+7(812)275-97-62">+7 (812) 275-97-62</a></p>
 				</div>
-				<div class="4u 12u(xsmall) align-right">
+				<div class="4u 12u(small) align-right">
 					<div class="email-us">
 						<h4>EMAIL US</h4>
 						<p><a href="mailto:info@annanova-gallery.ru">info@annanova-gallery.ru</a></p>
