fix: remove link in the footer

--- a/author.html
+++ b/author.html
@@ -462,7 +462,7 @@
 		<footer id="footer">
 			<div class="row 0%">
 				<div class="4u 12u(xsmall) fit align-left(">
-					<h4><a href="http://annanova-gallery.ru/about.php">PARTNERSHIP</a></h4>
+					<h4>PARTNERSHIP</h4>
 					<p><a href="">For collectors, designers, museums, etc.</a></p>
 				</div>
 				<div class="4u 12u(xsmall) align-center">
