fix: slider center mode on booklet page

--- a/booklet.html
+++ b/booklet.html
@@ -269,7 +269,7 @@
 					</a>
 					<div class="issue">Issue #7</div>
 					<h4 class="name">
-						<a href="#">BOOKLET</a>
+						<a href="#">BOOKLET 1</a>
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
@@ -279,7 +279,7 @@
 					</a>
 					<div class="issue">Issue #7</div>
 					<h4 class="name">
-						<a href="#">BOOKLET</a>
+						<a href="#">BOOKLET 2</a>
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
@@ -289,7 +289,7 @@
 					</a>
 					<div class="issue">Issue #7</div>
 					<h4 class="name">
-						<a href="#">BOOKLET</a>
+						<a href="#">BOOKLET 3</a>
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
@@ -299,7 +299,7 @@
 					</a>
 					<div class="issue">Issue #7</div>
 					<h4 class="name">
-						<a href="#">BOOKLET</a>
+						<a href="#">BOOKLET 4</a>
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
@@ -309,7 +309,7 @@
 					</a>
 					<div class="issue">Issue #7</div>
 					<h4 class="name">
-						<a href="#">BOOKLET</a>
+						<a href="#">BOOKLET 5</a>
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
@@ -351,8 +351,8 @@
 								<div class="item">Гостиницы:</div>
 								<div class="item">Demetra Art Hotel</div>
 								<div class="item">W Saint-Petersburg</div>
-								<div class="item">Эрмитаж</div>	
-							</div>						
+								<div class="item">Эрмитаж</div>
+							</div>
 						</div>
 						<div class="expandeble">
 							<h4 class="headline">Spa&Beauty:</h4>
