Правки по странице автора

--- a/author.html
+++ b/author.html
@@ -119,13 +119,10 @@
 						</div>
 						<div class="8u 12u$(small) text">
 							<div class="row">
-								<div class="6u 12u$(xsmall)">
+								<div class="12u personal-text">
 									<p>Родилась: 1986, Ленинград (Санкт-Петербург).<br>Образование: Лондонский Университет Искусств, Central Saint Martins College (фотография).</p>
 									<p>В 2014 году Юлдус стала первым (и пока единственным) русским спикером в истории конференции TED, где она выступила с речью в марте 2014 года и мае 2017 года. В октябре 2014 Юлдус была названа каналом BBC одной из 100 женщин года, меняющих мир к лучшему и приняла участие в дебатах на BBC и телевизионной программе 100 women. Бахтиозина работает с молодым поколением, раскрывая тему современного эскапизма.</p>
-									<p>Несмотря на современный уровень технологий, Бахтиозина предпочитает аналоговую камеру цифровой, стремясь запечатлеть природу объекта, показать его самые глубокие края и душу под ними. Внутри каждого снимка все детали создаются Юлдус самостоятельно, чтобы заполнить</p>
-								</div>
-								<div class="6u 12u$(xsmall)">
-									<p>историю позади каждой фотографии со своим видениеми воображением.</p>
+									<p>Несмотря на современный уровень технологий, Бахтиозина предпочитает аналоговую камеру цифровой, стремясь запечатлеть природу объекта, показать его самые глубокие края и душу под ними. Внутри каждого снимка все детали создаются Юлдус самостоятельно, чтобы заполнить историю позади каждой фотографии со своим видениеми воображением.</p>
 									<p>В апреле 2015 года работа Юлдус была выбрана как победитель выставки Leica + Vogue Italia с выставкой в Милане.</p>
 									<p>В июне 2016 года Vogue Италия назвал Бахтиозину Лучшим молодым фотографом моды (Best Fashion Photographer) на Photo Vogue.</p>
 									<p>В марте 2017 года Юлдус вошла в шорт-лист престижной международной премии Laguna Art Prize. На данный момент художница работает над созданием своей первой фото книги.</p>
@@ -140,7 +137,7 @@
 						</div>
 						<div class="8u 12u$(small) text">
 							<div class="row">
-								<div class="6u 12u$(xsmall)">
+								<div class="12u personal-text">
 									<p class="headline">ПЕРСОНАЛЬНЫЕ ВЫСТАВКИ</p>
 									<p>2017 "Сотворенная жизнь", Anna Nova Gallery, Санкт-Петербург, Россия.</p>
 									<p>2015 "Russ Land", Anna Nova Gallery, Санкт-Петербург, Россия.</p>
@@ -151,8 +148,7 @@
 									<p>2011 «Touch Down», Fabrika Gallery, Москва, Россия.</p>
 									<p>2010 «Ask me about Jesus», Salon Gallery, London, UK.</p>
 									<p>2009 «Be Happy and Healthy», Lower Street Gallery, SE17 London, UK.</p>
-								</div>
-								<div class="6u 12u$(xsmall)">
+
 									<p class="headline">ИЗБРАННЫЕ ГРУППОВЫЕ ВЫСТАВКИ</p>
 									<p>2011 "EdgyONE", Alekano Gallery, London, UK.</p>
 									<p>2011 "Best of Russia", Винзавод, Москва, Россия</p>
@@ -169,10 +165,9 @@
 						</div>
 						<div class="8u 12u$(small) text">
 							<div class="row">
-								<div class="6u 12u$(xsmall)">
+								<div class="12u personal-text">
 									<p>To promote social responsibility through Sorigué with a range of activities in the fields of socio-education, culture and art. We have built a significant collection of national and international contemporary art of more than 450 works of painting, drawing, photography, new media, and sculpture.</p>
 								</div>
-								<div class="6u 12u$(xsmall)"></div>
 							</div>
 						</div>
 					</div>
