--- a/author.html
+++ b/author.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="assets/css/fonts.css" />
 		<link rel="stylesheet" href="assets/css/animate.min.css" />
 
+		<link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
 		<link rel="stylesheet" href="assets/css/styles.css" />
-		<link rel="stylesheet" href="assets/css/owl-carousel.css" />
 		<style type="text/css">
 			.no-js #loader { display: none;  }
 			.js #loader { display: block; position: absolute; left: 100px; top: 0; }
@@ -91,7 +91,9 @@
 <!-- BANNER -->
 		<section id="b-author-banner" class="fadeIn">
 			<div class="mask-content">
-				ULDUZ<br>BAKHTIOZINA
+				<span class="name">
+					ULDUZ<br>BAKHTIOZINA
+				</span>
 			</div>
 		</section>
 
@@ -197,30 +199,44 @@
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="item">
-						<img src="images/author/1.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/1.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/2.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/2.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/3.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/3.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/4.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/4.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/5.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/5.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/6.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/6.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/7.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/7.jpg">
+						</a>
 					</div>
 					<div class="item goto">
 						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
-					<!-- <a href="#" class="last"></a> -->
+					<div class="item last">&nbsp;</div>
 				</div>
 			</div>	
 
@@ -237,15 +253,19 @@
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="item">
-						<img src="images/author/6.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/6.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/7.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/7.jpg">
+						</a>
 					</div>
 					<div class="item goto">
 						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
-					<!-- <a href="#" class="item last"></a> -->
+					<div class="item last">&nbsp;</div>
 				</div>
 			</div>
 			<div class="project-item">
@@ -262,30 +282,44 @@
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="item">
-						<img src="images/author/1.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/1.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/2.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/2.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/3.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/3.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/4.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/4.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/5.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/5.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/6.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/6.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/7.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/7.jpg">
+						</a>
 					</div>
 					<div class="item goto">
 						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
-					<!-- <a href="#" class="item last"></a> -->
+					<div class="item last">&nbsp;</div>
 				</div>
 			</div>
 			<div class="project-item">
@@ -302,21 +336,29 @@
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="item">
-						<img src="images/author/3.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/3.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/4.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/4.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/5.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/5.jpg">
+						</a>
 					</div>
 					<div class="item">
-						<img src="images/author/7.jpg">
+						<a data-fancybox data-src="#project1" href="javascript://">
+							<img src="images/author/7.jpg">
+						</a>
 					</div>
 					<div class="item goto">
 						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
-					<!-- <a href="#" class="item last"></a> -->
+					<div class="item last">&nbsp;</div>
 				</div>
 			</div>
 		</section>
@@ -474,6 +516,35 @@
 			</div>
 		</footer>
 
+
+<!-- Модалка -->
+<div style="display: none;" class="b-main-modal" id="project1">
+	<div class="main-modal-inner">
+		<div class="content">
+			<img src="images/1.jpg">
+			<div class="project-description">
+				<div class="title">Сказка о мертвой царевне и о семи богатырях</div>
+				<a href="#" class="author">Юлдуз Бахтиозина</a>
+				<div class="expand">
+					<div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
+					<div class="project-name">Проект: <a href="#">Russ land</a></div>
+					<ul class="project-social">
+						<li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+						<li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
+						<li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="control-btn prev">
+			<img src="images/project/arrow-2.svg" class="icon" id="next">
+		</div>
+		<div class="control-btn next">
+			<img src="images/project/arrow-2.svg" class="icon" id="prev">
+		</div>
+	</div>
+</div>
+
 <!-- SCRIPTS -->
 
 		<!-- SKELJS -->
@@ -515,9 +586,6 @@
 		<!-- WOWJS -->
 		<script src="assets/js/wowjs/wow.min.js"></script>
 
-		<!-- OWL CAROUSEL -->
-		<script src="assets/js/owl/owl-carousel.js"></script>
-
 		<!-- MAINJS -->
 		<script src="assets/js/main.js"></script>
 
@@ -529,6 +597,9 @@
 
 		<!-- Scrollspy -->
 		<script src="assets/js/scrollspy.js"></script>
+
+		<!-- Fancybox -->
+		<script src="assets/js/fancybox/jquery.fancybox.min.js"></script>
 
 		<!-- New scripts -->
 		<script src="assets/js/scripts.js"></script>
