fix: title & data project-item on author page

--- a/author.html
+++ b/author.html
@@ -230,14 +230,14 @@
 			<div class="project-item">
 				<div class="mobile-headline">
 					<div class="type">Project</div>
-					<div class="title">RUSS LAND</div>
-					<div class="date">28.04 - 29.08.2017</div>
+					<div class="title"><a href="#">RUSS LAND</a></div>
+					<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 				</div>
 				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Project</div>
-						<div class="title">RUSS LAND</div>
-						<div class="date">28.04 - 29.08.2017</div>
+						<div class="title"><a href="#">RUSS LAND</a></div>
+						<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 					</div>
 					<div class="item">
 						<a data-fancybox data-src="#project1" href="javascript://">
@@ -279,19 +279,18 @@
 					</div>
 					<div class="item last">&nbsp;</div>
 				</div>
-			</div>	
-
+			</div>
 			<div class="project-item">
 				<div class="mobile-headline">
 					<div class="type">Group Project</div>
-					<div class="title">Conjured life</div>
-					<div class="date">28.04 - 29.08.2017</div>
+					<div class="title"><a href="#">Conjured life</a></div>
+					<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 				</div>
 				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Group Project</div>
-						<div class="title">Conjured life</div>
-						<div class="date">28.04 - 29.08.2017</div>
+						<div class="title"><a href="#">Conjured life</a></div>
+						<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 					</div>
 					<div class="item">
 						<a data-fancybox data-src="#project1" href="javascript://">
@@ -312,15 +311,15 @@
 			<div class="project-item">
 				<div class="mobile-headline">
 					<div class="type">Project</div>
-					<div class="title">RUSS LAND</div>
-					<div class="date">28.04 - 29.08.2017</div>
+					<div class="title"><a href="#">RUSS LAND</a></div>
+					<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 				</div>
 
 				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Project</div>
-						<div class="title">RUSS LAND</div>
-						<div class="date">28.04 - 29.08.2017</div>
+						<div class="title"><a href="#">RUSS LAND</a></div>
+						<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 					</div>
 					<div class="item">
 						<a data-fancybox data-src="#project1" href="javascript://">
@@ -366,15 +365,15 @@
 			<div class="project-item">
 				<div class="mobile-headline">
 					<div class="type">Group Project</div>
-					<div class="title">Conjured life</div>
-					<div class="date">28.04 - 29.08.2017</div>
+					<div class="title"><a href="#">Conjured life</a></div>
+					<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 				</div>
 
 				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Group Project</div>
-						<div class="title">Conjured life</div>
-						<div class="date">28.04 - 29.08.2017</div>
+						<div class="title"><a href="#">Conjured life</a></div>
+						<div class="date"><a href="#">28.04 - 29.08.2017</a></div>
 					</div>
 					<div class="item">
 						<a data-fancybox data-src="#project1" href="javascript://">
