feat: add link to contact phone on about page

--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
 						<div class="6u 12u$(small) item">
 							<div class="headline">АДРЕС:</div>
 							<p>Saint-Petersburg 191014<br>Jukovskogo street, 28</p>
-							<p>+7 (812) 275 97 62<br><a href="mailto:info@annanova-gallery.ru">info@annanova-gallery.ru</a></p>
+							<p><a href="tel:+78122759762">+7 (812) 275 97 62</a><br><a href="mailto:info@annanova-gallery.ru">info@annanova-gallery.ru</a></p>
 						</div>
 						<div class="6u 12u$(small)">
 							<div class="row">
