feat: add link to flour on about page

--- a/about.html
+++ b/about.html
@@ -187,7 +187,11 @@
 								</div>
 								<div class="6u 12u$(small) item left-padding">
 									<div class="headline">ПЛАН:</div>
-									<p>1 Flour<br>2 Flour<br>3 Flour</p>
+									<p>
+                    <a href="#">1 Flour</a><br>
+                    <a href="#">2 Flour</a><br>
+                    <a href="#">3 Flour</a>
+                  </p>
 								</div>
 							</div>
 						</div>
