--- a/project.html
+++ b/project.html
@@ -239,7 +239,7 @@
 		</div>
 
 <!-- GALERY -->
-		<section id="exposition">
+		<section id="exposition" class="container">
 			<div class="tipical-gallery">
 				<div class="item">
 					<div class="holder">
