--- a/project.html
+++ b/project.html
@@ -260,6 +260,7 @@
 					</div>
 				</div>
 			</div>
+
 		</section>
 
 <!-- PROJECTS -->
@@ -337,7 +338,11 @@
 <div style="display: none;" class="b-main-modal" id="project1">
 	<div class="main-modal-inner">
 		<div class="content">
-			<img src="images/1.jpg">
+			<div class="popup-slider">
+        <img src="images/1.jpg">
+        <img src="images/2.jpg">
+        <img src="images/3.jpg">
+      </div>
 			<div class="project-description">
 				<div class="title">Сказка о мертвой царевне и о семи богатырях</div>
 				<a href="#" class="author">Юлдуз Бахтиозина</a>
