fix: exposition slider fixed height on project page

--- a/project.html
+++ b/project.html
@@ -243,19 +243,19 @@
 			<div class="tipical-gallery">
 				<div class="item">
 					<div class="holder">
-						<img src="images/project/bg2.jpg">
+						<div class="item-image" style="background-image: url('images/project/bg1.jpg');"></div>
 						<div class="name">Anna Nova Gallery<br>II floor</div>
 					</div>
 				</div>
 				<div class="item">
 					<div class="holder">
-						<img src="images/project/bg2.jpg">
+						<div class="item-image" style="background-image: url('images/project/bg2.jpg');"></div>
 						<div class="name">Anna Nova Gallery<br>II floor</div>
 					</div>
 				</div>
 				<div class="item">
 					<div class="holder">
-						<img src="images/project/bg2.jpg">
+						<div class="item-image" style="background-image: url('images/project/bg1.jpg');"></div>
 						<div class="name">Anna Nova Gallery<br>II floor</div>
 					</div>
 				</div>
