Изменение плагина сетки с картинками на странице проекта

--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
 
 		<link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
 		<link rel="stylesheet" href="assets/css/styles.css" />
-		<link rel="stylesheet" href="assets/css/owl-carousel.css" />
+		<link rel="stylesheet" href="assets/css/justifiedGallery.css" />
 		<style type="text/css">
 			.no-js #loader { display: none;  }
 			.js #loader { display: block; position: absolute; left: 100px; top: 0; }
@@ -82,8 +82,12 @@
 		<!-- Fancybox -->
 		<script src="assets/js/fancybox/jquery.fancybox.min.js"></script>
 
+		<!-- Justifield gallery -->
+		<script src="assets/js/justifield/justifiedGallery.js"></script>
+
 		<!-- New scripts -->
 		<script src="assets/js/scripts.js"></script>
+
 	</head>
 
 	<body id="top" class="project-page second-screen">
@@ -176,62 +180,63 @@
 			</section>
 
 <!-- WORKS -->
-			<section id="works" class="b-works flex-images">
-				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+			<!-- <section id="works" class="b-works flex-images"> -->
+			<section id="works" class="b-works flex-gall">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
 				</a>
-				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
 				</a>
-				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
 				</a>
-				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
 				</a>
-				<a class="item" data-w="389" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/7.jpg">
 				</a>
-				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
 				</a>
-				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
 				</a>
-				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
 				</a>
-				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
 				</a>
-				<a class="item" data-w="389" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/7.jpg">
 				</a>
-				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
 				</a>
-				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
 				</a>
-				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
 				</a>
-				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
 				</a>
-				<a class="item" data-w="389" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/7.jpg">
 				</a>
-				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
 				</a>
-				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
 				</a>
-				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
 				</a>
-				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
+				<a class="" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
 				</a>
 			</section>
