feat: fix about page

--- a/about.html
+++ b/about.html
@@ -61,7 +61,10 @@
           });
           var marker = new google.maps.Marker({
             position: myLatLng,
-            map: map
+            map: map,
+            // icon: {
+            //     url: "images/markers/chart.png"
+            // }
           });
           marker.setMap(map);
           marker.addListener('click', function() {
