Доработки пропорций поп-апа работ, скриптов

--- a/project.html
+++ b/project.html
@@ -342,7 +342,7 @@
 <div style="display: none;" class="b-main-modal" id="project1">
 	<div class="main-modal-inner">
 		<div class="content">
-			<img src="images/author/9.jpg">
+			<img src="images/test_high.jpg">
 			<div class="project-description">
 				<div class="title">Сказка о мертвой царевне и о семи богатырях</div>
 				<a href="#" class="author">Юлдуз Бахтиозина</a>
