--- a/author.html
+++ b/author.html
@@ -561,7 +561,7 @@
 <div style="display: none;" class="b-main-modal" id="project1">
 	<div class="main-modal-inner">
 		<div class="content">
-			<img src="images/1.jpg">
+			<img src="images/test_wide.jpg">
 			<div class="project-description">
 				<div class="title">Сказка о мертвой царевне и о семи богатырях</div>
 				<a href="#" class="author">Юлдуз Бахтиозина</a>
