Новое поведение меню на страницах автора и проекта

--- a/author.html
+++ b/author.html
@@ -92,10 +92,10 @@
 		<header id="header" class="">
 			<a id="an-backtotop" class="lg-white" href="http://annanova-gallery.ru" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
-				<h4 class="item"><a href="#b-author-banner" onclick=""></a></h4>
-				<h4 class="item"><a href="#bio" onclick="$('#bio').animatescroll();">BIO</a></h4>
-				<h4 class="item"><a href="#projects" onclick="$('#projects').animatescroll();">PROJECTS</a></h4>
-				<h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">NEWS</a></h4>
+				<a href="#b-author-banner" onclick=""></a>
+				<a href="#bio" onclick="$('#bio').animatescroll();">BIO</a>
+				<a href="#projects" onclick="$('#projects').animatescroll();">PROJECTS</a>
+				<a href="#news" onclick="$('#news').animatescroll();">NEWS</a>
 			</div>
 			<a href="#nav" id="header-nav"></a>
 		</header>
@@ -140,6 +140,12 @@
 
 <!-- MAIN -->
 		<div id="main" class="container">
+			<div class="sticky-scroll-menu">
+				<a href="#b-author-banner" onclick=""></a>
+				<a href="#bio" onclick="$('#bio').animatescroll();">BIO</a>
+				<a href="#projects" onclick="$('#projects').animatescroll();">PROJECTS</a>
+				<a href="#news" onclick="$('#news').animatescroll();">NEWS</a>
+			</div>
 
 			<a id="an-backtotop" class="an-backtotop" onclick="$('#top').animatescroll();"></a>
 
