--- a/project.html
+++ b/project.html
@@ -99,10 +99,10 @@
 		<header id="header" class="">
 			<a id="an-backtotop" class="lg-white" href="http://annanova-gallery.ru" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
-				<h4 class="item"><a href="#b-banner" onclick=""></a></h4>
-				<h4 class="item"><a href="#about" onclick="$('#about').animatescroll();">ABOUT</a></h4>
-				<h4 class="item"><a href="#works" onclick="$('#works').animatescroll();">WORKS</a></h4>
-				<h4 class="item"><a href="#exposition" onclick="$('#exposition').animatescroll();">EXPOSITION</a></h4>
+				<a href="#b-banner" onclick=""></a>
+				<a href="#about" onclick="$('#about').animatescroll();">ABOUT</a>
+				<a href="#works" onclick="$('#works').animatescroll();">WORKS</a>
+				<a href="#exposition" onclick="$('#exposition').animatescroll();">EXPOSITION</a>
 			</div>
 			<a href="#nav" id="header-nav"></a>
 		</header>
@@ -152,6 +152,13 @@
 		<div id="main" class="container">
 
 			<a id="an-backtotop" class="an-backtotop" onclick="$('#top').animatescroll();"></a>
+
+			<div class="sticky-scroll-menu">
+				<a href="#b-banner" onclick=""></a>
+				<a href="#about" onclick="$('#about').animatescroll();">ABOUT</a>
+				<a href="#works" onclick="$('#works').animatescroll();">WORKS</a>
+				<a href="#exposition" onclick="$('#exposition').animatescroll();">EXPOSITION</a>
+			</div>
 
 <!-- TITLE -->
 			<section class="b-project-title">
